test_suite/ERROR_print3.out
A.foo: 0
ERROR_print3.java: 14:  Semantic Error: Print statement accepts only integer expressions.
